--- a/src/app/components/app-navbar/app-navbar.component.css
+++ b/src/app/components/app-navbar/app-navbar.component.css
@@ -1,30 +1,21 @@
 .ddspan {
-  width: 20%;
+  width: 25%;
   float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: red;
-  border: solid 1px;
-  margin-left: 5px;
+  text-align: center;
+}
+.ddspan:hover {
+  background-color: #e7e7e7f8;
 }
 .ddm {
-  width: 15em;
+  width: 20em;
+  padding: 5px;
+  font-size: 1em;
 }
 
-.eyy {
-  left: auto;
+.pointer {
+  cursor: pointer;
 }
 
-.dropdown-menu > li > a {
-  background-color: blue;
-  display: block;
-  padding: 3px 20px;
-  clear: both;
-  font-weight: 400;
-  line-height: 1.43;
-  color: #333;
-  white-space: nowrap;
-}
 
 /* .dropdown-menu {
   background-color: blue;
