--- a/src/app/components/app-navbar/app-navbar.component.html
+++ b/src/app/components/app-navbar/app-navbar.component.html
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,29 +6,12 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#" routerLink="/landingPage">Home
+        <a class="nav-link" href="#" routerLink="/landingPage">CryptoTracker
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" routerLink="/favCrypto">Favourite</a>
-      </li>
-      <li class="nav-item dropdown ddli" ngbDropdown>
-        <a class="nav-link dropdown-toggle dda" id="dropdown01" ngbDropdownToggle>{{langs[0]}}</a>
-        <div class="dropdown-menu ddm" aria-labelledby="dropdown01" ngbDropdownMenu>
-          <div *ngFor="let lang of langs">
-            <!-- <a class="dropdown-item ddla" href="#">{{lang}}</a> -->
-            <span class="ddspan">{{lang}}</span>
-          </div>
-        </div>
-      </li>
-      <li class="nav-item dropdown ddli" ngbDropdown>
-        <a class="nav-link dropdown-toggle dda" id="dropdown01" ngbDropdownToggle>{{langs[0]}}</a>
-        <div class="dropdown-menu ddm" aria-labelledby="dropdown01" ngbDropdownMenu>
-          <div *ngFor="let lang of langs">
-            <a class="dropdown-item ddla" href="#">{{lang}}</a>
-          </div>
-        </div>
       </li>
     </ul>
     <ul class="navbar-nav ddul">
@@ -37,18 +19,7 @@
         <a class="nav-link dropdown-toggle dda" id="dropdown01" ngbDropdownToggle>{{langs[0]}}</a>
         <div class="dropdown-menu ddm" aria-labelledby="dropdown01" ngbDropdownMenu>
           <div *ngFor="let lang of langs">
-            <!-- <a class="dropdown-item ddla" href="#">{{lang}}</a> -->
-            <span class="ddspan" (click)=test(lang)>{{lang}}</span>
-          </div>
-        </div>
-      </li>
-    </ul>
-    <ul class="navbar-nav eyy">
-      <li class="nav-item dropdown ddli" ngbDropdown>
-        <a class="nav-link dropdown-toggle dda" id="dropdown01" ngbDropdownToggle>{{langs[0]}}</a>
-        <div class="dropdown-menu ddm" aria-labelledby="dropdown01" ngbDropdownMenu>
-          <div *ngFor="let lang of langs">
-            <a class="dropdown-item ddla" href="#">{{lang}}</a>
+            <span class="ddspan pointer" (click)=test(lang)>{{lang}}</span>
           </div>
         </div>
       </li>
@@ -57,16 +28,5 @@
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-
-    <!-- <ul class="navbar-nav ddul">
-      <li class="nav-item dropdown ddli" ngbDropdown>
-        <a class="nav-link dropdown-toggle dda" id="dropdown01" ngbDropdownToggle>{{langs[0]}}</a>
-        <div class="dropdown-menu ddd" aria-labelledby="dropdown01" ngbDropdownMenu>
-          <div *ngFor="let lang of langs">
-            <a class="dropdown-item ddla" href="#">{{lang}}</a>
-          </div>
-        </div>
-      </li>
-    </ul> -->
   </div>
 </nav>
