--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -2,7 +2,8 @@
   <div class="navbar-collapse collapse dual-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="list-inline-item">Cryptocurrencies:
-        <a href="#" routerLink="/">{{global.active_currencies}}</a>
+        <a href="#" routerLink="/">{{currencies}}</a>
+        <!-- <a href="#" routerLink="/">1111</a> -->
       </li>
       <li class="list-inline-item">/ Markets:
         <a href="#" routerLink="/">{{global.active_markets}}</a>
